# subtitle-cleaner

./: CONTRIBUTING.md  DONATIONS.md  README.md  ROADMAP.md  cleaned_output.srt  cleaner.py  demo_corrupt.srt  diagnostics.py  pyproject.toml  regression_test.py  sample_input.srt  sample_vocab.json  test_cleaner.py  youtube_sync.py
.github/ISSUE_TEMPLATE/: broken-subtitle-report.md
detectors/: __init__.py  broken_arrows.py  duplicate_indices.py  nle_compatibility.py  reading_speed.py  timing_overlap.py  whitespace_corruption.py
