[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "subtitle-cleaner"
version = "0.2.0"
authors = [
    { name = "r1ngotchi", email = "104.rng@gmail.com" }
]
description = "A local-first subtitle sanitizer, readability optimizer, and NLE import formatter"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "yt-dlp>=2026.3.17",
]

[project.scripts]
subtitle-cleaner = "cleaner:main"
subtitle-diagnostics = "diagnostics:main"
subtitle-youtube-sync = "youtube_sync:main"
subtitle-regression = "regression_test:run_regression_tests"

[tool.setuptools]
py-modules = ["cleaner", "diagnostics", "youtube_sync", "regression_test"]
packages = ["detectors"]
